# 3DViewer

./: README.md
src/: CMakeLists.txt  Makefile  controller.cpp  controller.h  gifcreator.cpp  gifcreator.h  main.cpp  memento.h  model.cpp  model.h  openglwidget.cpp  openglwidget.h  view.cpp  view.h  view.ui
src/Doc/: doxygen.conf
src/tests/: s21_tests.cpp
